--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "airy-canvas",
   "version": "0.1.0",
   "description": "The realization of a front-end drawing board.",
-  "private": true,
+  "private": false,
   "main": "src/index.js",
   "scripts": {
     "serve": "vue-cli-service serve",
