--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "description": "The realization of a front-end drawing board.",
   "private": false,
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
+    "dist": "vue-cli-service build --target lib --name index ./src/index.js",
     "serve": "vue-cli-service serve",
     "lint": "vue-cli-service lint"
   },
@@ -19,7 +20,7 @@
     "@types/eslint": "^4.16.6",
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
+    "@vue/cli-service": "^3.5.1",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
@@ -42,6 +43,9 @@
       "parser": "babel-eslint"
     }
   },
+  "eslintIgnore": [
+    "dist/*"
+  ],
   "postcss": {
     "plugins": {
       "autoprefixer": {}
