--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "airy-canvas",
   "version": "0.1.3",
-  "description": "The realization of a front-end drawing board.",
   "private": false,
-  "main": "index.js",
+  "description": "The realization of a front-end drawing board.",
   "scripts": {
-    "dist": "vue-cli-service build --target lib --name index ./src/index.js",
     "serve": "vue-cli-service serve",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dist": "vue-cli-service build --target lib --name index ./src/index.js"
   },
-  "files": [
-    "dist/index.umd.min.js"
-  ],
-  "keywords": [
-    "canvas"
-  ],
   "dependencies": {
     "@types/vue": "^2.0.0",
+    "lodash": "^4.17.11",
+    "pixi.js": "^4.8.7",
     "vue": "^2.6.6"
   },
   "devDependencies": {
@@ -46,9 +41,6 @@
       "parser": "babel-eslint"
     }
   },
-  "eslintIgnore": [
-    "dist/*"
-  ],
   "postcss": {
     "plugins": {
       "autoprefixer": {}
@@ -58,5 +50,15 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "eslintIgnore": [
+    "dist/*"
+  ],
+  "files": [
+    "dist/index.umd.min.js"
+  ],
+  "keywords": [
+    "canvas"
+  ],
+  "main": "index.js"
 }
