--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dist": "vue-cli-service build --target lib --name index ./src/index.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "@types/vue": "^2.0.0",
     "lodash": "^4.17.11",
     "pixi.js": "^4.8.7",
