--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
+    "@types/lodash": "^4.14.123",
+    "@types/pixi.js": "^4.8.7",
     "@types/vue": "^2.0.0",
     "lodash": "^4.17.11",
     "pixi.js": "^4.8.7",
