--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "The realization of a front-end drawing board.",
   "scripts": {
     "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "dist": "vue-cli-service build --target lib --name index ./src/index.js"
   },
