--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/pixi.js": "^4.8.7",
     "@types/vue": "^2.0.0",
     "lodash": "^4.17.11",
+    "pixi-viewport": "^3.23.2",
     "pixi.js": "^4.8.7",
     "vue": "^2.6.6"
   },
