--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lodash": "^4.17.11",
     "pixi-viewport": "^3.23.2",
     "pixi.js": "^4.8.7",
-    "vue": "^2.6.6"
+    "vue": "^2.6.6",
+    "yy-fps": "^1.0.0"
   },
   "devDependencies": {
     "@types/eslint": "^4.16.6",
