--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/lodash": "^4.14.123",
     "@types/pixi.js": "^4.8.7",
     "@types/vue": "^2.0.0",
+    "koa-compose": "^4.1.0",
     "lodash": "^4.17.11",
     "pixi-viewport": "^3.23.2",
     "pixi.js": "^4.8.7",
-    "vue": "^2.6.6"
+    "vue": "^2.6.6",
+    "yy-fps": "^1.0.0"
   },
   "devDependencies": {
     "@types/eslint": "^4.16.6",
