--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.11",
     "pixi-viewport": "^3.23.2",
     "pixi.js": "^4.8.7",
+    "roboto-fontface": "^0.10.0",
     "vue": "^2.6.6",
     "yy-fps": "^1.0.0"
   },
