--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "serve": "vue-cli-service serve --mode development",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "dist": "vue-cli-service build --target lib --name index ./src/index.js"
+    "dist": "vue-cli-service build --target wc --name airy-canvas ./src/AiryCanvas.vue",
+    "dist:rollup": "cross-env NODE_ENV=production rollup -c rollup.config.js",
+    "dist:webpack": "rm -rf ./dist && webpack --config webpack.config.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
@@ -29,17 +31,36 @@
     "yy-fps": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "@types/eslint": "^4.16.6",
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
     "@vue/cli-service": "^3.5.1",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-runtime": "^6.26.0",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "file-loader": "^3.0.1",
+    "rollup": "^1.12.4",
+    "rollup-plugin-alias": "^1.5.1",
+    "rollup-plugin-buble": "^0.19.6",
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-uglify": "^6.0.2",
+    "rollup-plugin-vue": "^5.0.0",
+    "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.5.21"
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2"
   },
   "eslintConfig": {
     "root": true,
@@ -72,7 +93,8 @@
     "dist/index.umd.min.js"
   ],
   "keywords": [
-    "canvas"
+    "canvas",
+    "cooperate"
   ],
-  "main": "index.js"
+  "main": "./dist/index.js"
 }
