--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "airy-canvas",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "private": false,
   "description": "The realization of a front-end drawing board.",
   "scripts": {
@@ -8,7 +8,6 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "dist": "vue-cli-service build --target wc --name airy-canvas ./src/AiryCanvas.vue",
-    "dist:rollup": "cross-env NODE_ENV=production rollup -c rollup.config.js",
     "dist:webpack": "rm -rf ./dist && webpack --config webpack.config.js"
   },
   "dependencies": {
@@ -48,12 +47,6 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "file-loader": "^3.0.1",
-    "rollup": "^1.12.4",
-    "rollup-plugin-alias": "^1.5.1",
-    "rollup-plugin-buble": "^0.19.6",
-    "rollup-plugin-serve": "^1.0.1",
-    "rollup-plugin-uglify": "^6.0.2",
-    "rollup-plugin-vue": "^5.0.0",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
@@ -90,7 +83,7 @@
     "dist/*"
   ],
   "files": [
-    "dist/index.umd.min.js"
+    "dist"
   ],
   "keywords": [
     "canvas",
