--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "airy-canvas",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": false,
   "description": "The realization of a front-end drawing board.",
   "scripts": {
@@ -10,14 +10,19 @@
     "dist": "rm -rf ./dist && webpack --config webpack.config.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
-    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "@types/lodash": "^4.14.123",
     "@types/pixi.js": "^4.8.7",
     "@types/vue": "^2.0.0",
-    "jss": "^9.8.7",
+    "jss": "^10.0.0-alpha.22",
+    "jss-keyframes": "^0.1.0",
     "jss-plugin-camel-case": "^10.0.0-alpha.7",
+    "jss-plugin-expand": "^10.0.0-alpha.7",
+    "jss-plugin-nested": "^10.0.0-alpha.7",
+    "jss-plugin-rule-value-function": "^10.0.0-alpha.7",
+    "jss-preset-default": "^4.5.0",
     "koa-compose": "^4.1.0",
     "lodash": "^4.17.11",
     "pixi-multistyle-text": "^0.7.0",
